--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@
 
 # Log file
 *.log
-
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
 # BlueJ files
 *.ctxt
 
@@ -18,6 +23,9 @@
 *.zip
 *.tar.gz
 *.rar
+
+
+config.txt
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
