--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
  implementation 'net.sourceforge.tess4j:tess4j:4.3.1' 
  implementation 'org.apache.cassandra:cassandra-all:0.8.1'  
  implementation 'com.google.code.gson:gson:2.8.6'
+ implementation 'org.twitter4j:twitter4j-core:4.0.7'
 }
