--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 group 'red.felnull'
-version '1.1'
+version '1.2'
 apply plugin:'application'
 mainClassName = 'red.felnull.ikisugibot.Main'
 
@@ -28,5 +28,6 @@ dependencies {
  implementation 'org.apache.cassandra:cassandra-all:0.8.1'  
  implementation 'com.google.code.gson:gson:2.8.6'
  implementation 'org.twitter4j:twitter4j-core:4.0.7'
- implementation 'org.apache.opennlp:opennlp-tools:1.9.2'
+ implementation 'org.twitter4j:twitter4j-stream:4.0.7'
+
 }
